back/k8s/prod/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
