back/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress-ip" # built in the k9-canine-infra pipeline
    kubernetes.io/ingress.class: "gce"
